When ejecting a medium, invalidate the in core disklabel - it is not meaningfull anymore. This makes the following cdclose() use silent mode and finally fixes PR kern/43785.